Fix sidebar bus stop info overflow

--- a/client/scss/layout.scss
+++ b/client/scss/layout.scss
@@ -1,5 +1,5 @@
 html, body, .full-height {
-  font-family: 'Archivo Black', sans-serif;
+  font-family: 'Open Sans Condensed  ', sans-serif;
   height: 100%;
   width: 100%;
 }
@@ -32,6 +32,7 @@ html, body, .full-height {
 
 .gm-style {
   .gm-style-iw {
+  position: relative;
   background-color: #3C61AD !important;
     top: 0 !important;
     left: 0 !important;
@@ -68,7 +69,13 @@ html, body, .full-height {
 #stop-info {
   background: white;
   border-radius: 8px;
-  border: 2px;
+  border: 1px solid #88c9c9 !important;
+  margin: 5px;
+  background: #e9f1f0;
+  opacity: 0.8;
+  font-size: 20px;
+  padding: 10px;
+  list-style: none !important;
 }
 #sidebar-wrapper {
   z-index: 1000;
@@ -102,10 +109,10 @@ div#app {
 
 .sidebar-nav {
   overflow: hidden;
-   position: absolute;
+   position: inherit;
    top: 0;
-   width: 350px;
-   height: 200px;
+   width: 100%;
+   height: 100%;
    margin: 15px;
    padding: 0;
    list-style: none;
